--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main class="container pt-4 pb-3 flex-grow-1">
             <div class="mx-auto" style="max-width: 960px;">
-                <section class="card-surface hero-card p-4 p-md-4 mt-5 mb-3">
+                <section class="card-surface hero-card shadow-lg p-4 p-md-4 mt-3 mb-3">
                     <div class="d-flex align-items-center gap-3 gap-md-4 flex-wrap">
                         <img class="profile-img" src="assets/img/profile.png" alt="Frank Runfola headshot" loading="lazy" />
 
