New about me page

--- a/training.html
+++ b/training.html
@@ -61,6 +61,21 @@
                             </div>
                         </a>
                     </div>
+
+                    <div class="col-12 col-sm-6 col-md-auto">
+                        <a class="hub-btn hub-tile" href="terms.html" aria-label="Go to Data Engineering Terms">
+                            <div class="hub-left">
+                                <div class="hub-ico"><i class="bi bi-book"></i></div>
+                                <div class="text-center">
+                                    <div class="hub-title">Terms</div>
+                                    <div class="hub-sub">Definitions</div>
+                                </div>
+                            </div>
+                            <div class="hub-right">
+                                <i class="bi bi-arrow-right"></i>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </section>
 
